Life is Beautiful💜

--- a/bdc.html
+++ b/bdc.html
@@ -867,6 +867,25 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
+    <script>
+        // Prefer compact view on small mobile screens (~75% zoom equivalent)
+        (function () {
+            const vp = document.querySelector('meta[name="viewport"]');
+            if (!vp) return;
+            const apply = () => {
+                const isMobile = (navigator.userAgentData && navigator.userAgentData.mobile) || /Mobi|Android/i.test(navigator.userAgent);
+                const narrow = Math.min(window.innerWidth, window.innerHeight) <= 420;
+                const scale = (isMobile && narrow) ? 0.75 : 1;
+                const current = vp.getAttribute('content') || '';
+                const next = `width=device-width, initial-scale=${scale}`;
+                if (current !== next) vp.setAttribute('content', next);
+            };
+            window.addEventListener('load', apply, { once: true });
+            window.addEventListener('resize', apply);
+            window.addEventListener('orientationchange', apply);
+        })();
+    </script>
+
     <script type="module">
         const __pendingCounts__ = new Map();
         window.__statsVisible__ = false;
