--- a/bdc.html
+++ b/bdc.html
@@ -776,6 +776,21 @@
             flex-shrink: 0;
         }
 
+        /* Responsive footer: safe-area padding + scalable sizes */
+        footer {
+            padding-bottom: max(1rem, env(safe-area-inset-bottom));
+        }
+        @supports not (padding-bottom: max(1rem, 1rem)) {
+            footer { padding-bottom: 1rem; }
+        }
+        footer .footer-text { font-size: clamp(0.75rem, 1.6vw, 0.9rem); }
+        footer .socials { gap: clamp(0.5rem, 2vw, 0.9rem); }
+        footer .social-link {
+            width: clamp(2.25rem, 4.8vw, 2.75rem);
+            height: clamp(2.25rem, 4.8vw, 2.75rem);
+        }
+        footer .social-link i { font-size: clamp(0.9rem, 2.6vw, 1.1rem); }
+
         /* Float-In animation for scroll reveal */
         .float-in {
             opacity: 0;
@@ -2764,19 +2779,19 @@
         <div class="absolute top-0 left-0 right-0 h-1 bg-gradient-to-r from-transparent via-red-500/60 to-transparent">
         </div>
         <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8 text-center py-8">
-            <p class="mb-3 text-sm opacity-90">© 2025 Life is Beautiful 💜</p>
-            <div class="flex justify-center gap-3 mt-2">
+            <p class="mb-3 footer-text opacity-90">© 2025 Life is Beautiful 💜</p>
+            <div class="flex justify-center socials mt-2">
                 <a href="https://github.com/MueidShahriar" aria-label="GitHub" target="_blank" rel="noopener noreferrer"
-                    class="inline-flex items-center justify-center w-9 h-9 rounded-full border border-white/10 bg-white/5 hover:bg-white/10 hover:border-white/20 text-white transition shadow-sm">
+                    class="inline-flex items-center justify-center social-link rounded-full border border-white/10 bg-white/5 hover:bg-white/10 hover:border-white/20 text-white transition shadow-sm">
                     <i class="fab fa-github"></i>
                 </a>
                 <a href="https://www.facebook.com/mueid016" aria-label="Facebook" target="_blank"
                     rel="noopener noreferrer"
-                    class="inline-flex items-center justify-center w-9 h-9 rounded-full border border-white/10 bg-white/5 hover:bg-white/10 hover:border-white/20 text-white transition shadow-sm">
+                    class="inline-flex items-center justify-center social-link rounded-full border border-white/10 bg-white/5 hover:bg-white/10 hover:border-white/20 text-white transition shadow-sm">
                     <i class="fab fa-facebook"></i>
                 </a>
             </div>
-            <p class="mt-5 text-sm opacity-90">Developed by Md. Mueid Shahriar<br />CSE-16th, BAUET</p>
+            <p class="mt-5 footer-text opacity-90">Developed by Md. Mueid Shahriar<br />CSE-16th, BAUET</p>
         </div>
     </footer>
 
