--- a/bdc.html
+++ b/bdc.html
@@ -130,12 +130,39 @@
             background-size: 50%
         }
 
+        /* Keep indicators inside card width and make them dots */
+        #recentDonorCarousel .carousel-indicators {
+            left: 50%;
+            right: auto; 
+            transform: translateX(-50%);
+            width: min(640px, calc(100% - 64px)); 
+            margin: 0 auto !important; 
+            padding: 0 8px;
+            bottom: 4px; /* position near bottom edge of carousel */
+            display: flex;
+            flex-wrap: wrap; 
+            justify-content: center;
+            list-style: none;
+        }
         #recentDonorCarousel .carousel-indicators li {
-            background-color: #ffdede
+            background-color: #ffdede;
+            width: 8px; 
+            height: 8px;
+            border-radius: 50%;
+            margin: 4px 5px;
+        }
+        #recentDonorCarousel .carousel-indicators .active {
+            background-color: var(--red-500);
+            width: 10px;
+            height: 10px;
         }
 
-        #recentDonorCarousel .carousel-indicators .active {
-            background-color: var(--red-500)
+        /* Provide breathing room inside the recent donation card for indicators */
+        #recentDonorCarousel .recent-card {
+            padding-bottom: 3.25rem; 
+        }
+        @media (max-width: 640px) {
+            #recentDonorCarousel .recent-card { padding-bottom: 2.75rem; }
         }
 
         #back-to-top {
@@ -281,7 +308,6 @@
             color: #0ea5e9;
         }
 
-        /* Soft tints for card backgrounds */
         .how-card.tint-rose {
             background: linear-gradient(180deg, rgba(255, 241, 242, .92), #ffffff);
         }
@@ -444,6 +470,22 @@
             pointer-events: none;
             border-radius: 14px;
             box-shadow: inset 0 0 0 1px rgba(225, 29, 72, .08);
+        }
+        /* neat subtle dashed divider inside the card that never overflows */
+        .recent-card .dashed-divider {
+            position: relative;
+            height: 10px;
+            margin: 10px auto 0;
+            max-width: 520px; /* narrower than card */
+        }
+        .recent-card .dashed-divider::before {
+            content: "";
+            position: absolute;
+            left: 6%;
+            right: 6%;
+            top: 50%;
+            transform: translateY(-50%);
+            border-bottom: 2px dashed rgba(225, 29, 72, 0.18);
         }
 
         .info-list li {
@@ -1750,21 +1792,23 @@
         });
 
         const recentDonationsRef = ref(database, 'recentDonations');
-        const recentDonationsQuery = query(recentDonationsRef, limitToLast(3));
-        onValue(recentDonationsQuery, (snapshot) => {
+        onValue(recentDonationsRef, (snapshot) => {
             const data = snapshot.val();
             const recentDonors = [];
             if (data) {
                 for (const key in data) {
                     if (data.hasOwnProperty(key)) {
-                        recentDonors.push({
-                            id: key,
-                            ...data[key]
-                        });
+                        recentDonors.push({ id: key, ...data[key] });
                     }
                 }
             }
-            renderRecentDonorsCarousel(recentDonors.reverse());
+            // Sort by date (latest first) when available
+            recentDonors.sort((a, b) => {
+                const ad = a.date ? new Date(a.date).getTime() : 0;
+                const bd = b.date ? new Date(b.date).getTime() : 0;
+                return bd - ad;
+            });
+            renderRecentDonorsCarousel(recentDonors);
         }, (error) => {
             console.error("Failed to load recent donations: ", error);
         });
