--- a/bdc.html
+++ b/bdc.html
@@ -335,10 +335,6 @@
             background: linear-gradient(180deg, rgba(240, 249, 255, .92), #ffffff);
         }
 
-        .insight-card .insight-chart {
-            height: 16rem;
-        }
-
         .insight-chip {
             display: inline-flex;
             align-items: center;
@@ -371,6 +367,24 @@
         .insight-chip-indigo {
             background: rgba(99, 102, 241, 0.15);
             color: #4338ca;
+        }
+
+        .insights-grid {
+            display: grid;
+            gap: 1.5rem;
+            grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+            align-items: stretch;
+        }
+
+        .insight-card {
+            display: flex;
+            flex-direction: column;
+            min-height: 100%;
+        }
+
+        .insight-card .insight-chart {
+            height: 16rem;
+            flex: 1 0 auto;
         }
 
         .icon-circle-sm {
