--- a/bdc.html
+++ b/bdc.html
@@ -369,23 +369,7 @@
             color: #4338ca;
         }
 
-        .insights-grid {
-            display: grid;
-            gap: 1.5rem;
-            grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-            align-items: stretch;
-        }
 
-        .insight-card {
-            display: flex;
-            flex-direction: column;
-            min-height: 100%;
-        }
-
-        .insight-card .insight-chart {
-            height: 16rem;
-            flex: 1 0 auto;
-        }
 
         .icon-circle-sm {
             width: 40px;
@@ -1284,17 +1268,6 @@
                 grid-template-columns: 1fr !important;
             }
 
-            .insights-grid {
-                grid-template-columns: 1fr !important;
-            }
-
-            .insight-card {
-                padding: clamp(1rem, 4vw, 1.25rem) !important;
-            }
-
-            .insight-card .insight-chart {
-                height: 13.5rem;
-            }
         }
 
         @media (max-width: 360px) {
@@ -3082,8 +3055,8 @@
                 </div>
                 <span class="inline-flex items-center gap-2 text-xs font-semibold uppercase tracking-wide text-red-600"><i class="fa-solid fa-signal"></i>Realtime</span>
             </div>
-            <div class="insights-grid mt-6 grid gap-6 md:grid-cols-2 xl:grid-cols-3">
-                <article class="insight-card how-card accent-emerald tint-emerald rounded-xl shadow-lg p-6 transform transition hover:scale-105 float-in flex flex-col">
+            <div class="mt-6 grid gap-6 md:grid-cols-2 xl:grid-cols-3">
+                <article class="how-card accent-emerald tint-emerald rounded-xl shadow-lg p-6 transform transition hover:scale-105 float-in flex flex-col">
                     <span class="insight-chip insight-chip-emerald"><i class="fa-solid fa-chart-pie" aria-hidden="true"></i>Age Profile</span>
                     <div class="flex items-center justify-between gap-3">
                         <div class="flex items-center gap-3">
@@ -3093,13 +3066,13 @@
                         <span class="text-xs font-semibold text-emerald-600">Auto-updates</span>
                     </div>
                     <p class="mt-2 text-sm text-gray-600">Tracks how many active donors fall into each age band so outreach stays balanced.</p>
-                    <div class="insight-chart mt-4">
+                    <div class="mt-4 h-64">
                         <canvas id="ageGroupChart" class="w-full h-full" aria-label="Donor age group breakdown" role="img"></canvas>
                     </div>
                     <p id="ageGroupChartEmpty" class="mt-3 text-sm text-gray-500 hidden">No donor age data available yet. Add ages to donor profiles to populate this chart.</p>
                 </article>
 
-                <article class="insight-card how-card accent-amber tint-amber rounded-xl shadow-lg p-6 transform transition hover:scale-105 float-in flex flex-col">
+                <article class="how-card accent-amber tint-amber rounded-xl shadow-lg p-6 transform transition hover:scale-105 float-in flex flex-col">
                     <span class="insight-chip insight-chip-amber"><i class="fa-solid fa-clock-rotate-left" aria-hidden="true"></i>Monthly Pulse</span>
                     <div class="flex items-center justify-between gap-3">
                         <div class="flex items-center gap-3">
@@ -3109,13 +3082,13 @@
                         <span class="text-xs font-semibold text-amber-500">Year to date</span>
                     </div>
                     <p class="mt-2 text-sm text-gray-600">Visualises donation activity by month so you can spot seasonal trends at a glance.</p>
-                    <div class="insight-chart mt-4">
+                    <div class="mt-4 h-64">
                         <canvas id="monthlyDonorChart" class="w-full h-full" aria-label="Monthly donation distribution" role="img"></canvas>
                     </div>
                     <p id="monthlyDonorChartEmpty" class="mt-3 text-sm text-gray-500 hidden">No donation records found for this year. Log donations to activate this chart.</p>
                 </article>
 
-                <article class="insight-card how-card accent-indigo tint-indigo rounded-xl shadow-lg p-6 transform transition hover:scale-105 float-in flex flex-col">
+                <article class="how-card accent-indigo tint-indigo rounded-xl shadow-lg p-6 transform transition hover:scale-105 float-in flex flex-col">
                     <span class="insight-chip insight-chip-indigo"><i class="fa-solid fa-droplet" aria-hidden="true"></i>Blood Inventory</span>
                     <div class="flex items-center justify-between gap-3">
                         <div class="flex items-center gap-3">
@@ -3125,7 +3098,7 @@
                         <span class="text-xs font-semibold text-indigo-500">Supply pulse</span>
                     </div>
                     <p class="mt-2 text-sm text-gray-600">Shows how your donor pool is distributed by blood type so you immediately see gaps.</p>
-                    <div class="insight-chart mt-4">
+                    <div class="mt-4 h-64">
                         <canvas id="bloodGroupChart" class="w-full h-full" aria-label="Blood group distribution" role="img"></canvas>
                     </div>
                     <p id="bloodGroupChartEmpty" class="mt-3 text-sm text-gray-500 hidden">No blood group records to display yet. Add donors to populate this view.</p>
